<resources>
    <string name="app_name">drawerLast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Demo Gallery</string>
    <string name="menu_slideshow">Calculator</string>
    <string name="menu_tools">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_calculator">basic calculator</string>
    <string name="enter_number1">enter number1</string>
    <string name="enter_number2">enter number2</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="mul">x</string>
    <string name="sub">-</string>
    <string name="clear">Clear</string>
    <string name="favorites">Favorites</string>
    <string name="type_the_course_code">type the course code</string>
    <string name="enter_course_code">enter course code</string>
    <string name="action_login">Log In</string>
    <string name="action_logout">Log Out</string>
    <string name="action_account">My Account</string>
    <string name="submit_paper">Submit Paper</string>
    <string name="communicate">Communicate</string>
    <string name="iut_exams">IUT EXAMS</string>
    <string name="user_host_com">user@host.com</string>
    <string name="sem8">SEM8</string>
    <string name="tve_department">TVE DEPARTMENT</string>
    <string name="sem7">SEM7</string>
    <string name="todo">TODO</string>
    <string name="sem6">SEM6</string>
    <string name="sem5">SEM5</string>
    <string name="sem4">SEM4</string>
    <string name="sem3">SEM3</string>
    <string name="sem2">SEM2</string>
    <string name="sem1">SEM1</string>
    <string name="department_icon">Department Icon</string>
    <string name="sem9">SEM9</string>
</resources>
