<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SemesterFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/iBtnSem8"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="260dp"
            android:contentDescription="@string/sem8"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/iBtnSem7"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="260dp"
            android:contentDescription="@string/sem7"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/iBtnSem9"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="260dp"
            android:contentDescription="@string/sem9"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/iBtnSem5"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="148dp"
            android:contentDescription="@string/sem5"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/iBtnSem4"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="148dp"
            android:contentDescription="@string/sem4"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/iBtnSem6"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="148dp"
            android:contentDescription="@string/sem6"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/iBtnSem3"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/sem3"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/iBtnSem2"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/sem2"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="409dp"
            android:layout_height="214dp"
            android:layout_marginTop="48dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/department_icon"
            android:src="@mipmap/ic_cse_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/iBtnSem1"
            android:layout_width="112dp"
            android:layout_height="79dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/sem1"
            android:src="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/txtSem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem1"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem1"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem1"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem1"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/department_icon"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/txtSem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem2"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem2"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem2"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtSem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem3"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem3"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem3"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtSem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem4"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem4"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem4"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem4"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtSem5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem5"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem5"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem5"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem5"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtSem6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem6"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem6"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem6"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem6"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtSem7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem7"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem7"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem7"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem7"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtSem8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem8"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem8"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem8"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem8"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtSem9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/sem9"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintBottom_toBottomOf="@+id/iBtnSem9"
            app:layout_constraintEnd_toEndOf="@+id/iBtnSem9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iBtnSem9"
            app:layout_constraintTop_toTopOf="@+id/iBtnSem9"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>